# Prime-Pick

./: .gitignore  README.md  package-lock.json  package.json
ai-chat-service/: Cargo.toml
ai-chat-service/src/: agent.rs  config.rs  main.rs  moderator.rs  server.rs  tools.rs
backend/: Dockerfile  docker-compose.yml  drizzle.config.ts  package.json  tsconfig.json
backend/src/: server.ts
backend/src/authorization/: context.ts
backend/src/config/: env.ts  orderConstants.ts  roles.ts
backend/src/db/: index.ts  schema.ts  validation.ts
backend/src/db/queries/: article.queries.ts  cart.queries.ts  category.queries.ts  comment.queries.ts  index.ts  notification.queries.ts  order.queries.ts  product.queries.ts  (+1 more)
backend/src/lib/: redis.ts
backend/src/uploadthing/: router.ts
frontend/: .gitignore  next.config.ts  package.json  playwright.config.ts
frontend/middleware/: clerkMiddleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/components/: AddToCartButton.tsx  CategoryCard.tsx  ChatWidget.tsx  CommentSection.tsx  Navbar.tsx  NotificationPopup.tsx  ProductCard.tsx  ReviewPopup.tsx  SearchModal.tsx
frontend/src/context/: ChatContext.tsx
frontend/src/graphql/: articles.ts  cart.ts  categories.ts  comments.ts  notifications.ts  orders.ts  products.ts  user.ts
frontend/src/hooks/: useProduct.ts  useProducts.ts
frontend/src/lib/: apollo-client.ts  apollo-provider.tsx
frontend/src/store/: cartStore.ts  searchStore.ts
frontend/src/utils/: uploadthing.ts
frontend/tests/: chat-sync.spec.ts
(+48 files in other folders)
