[package]
name = "product-store-agent"
version = "0.1.0"
edition = "2021"
description = "AI Product Store Assistant using Ollama + Rig"
authors = ["Ahmad <ahmedhawash321@gmail.com>"]

[dependencies]
# Rig Core for AI logic
rig-core = { version = "0.36", features = ["derive", "rustls"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Web Server (New)
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# Serialization & HTTP
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# CLI & Config
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"

# Error Handling & Logging
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"